--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jordan Collins">
-    <link rel="icon" type="img/png" href="img/favicon.png">
+    <link rel="icon" type="img/png" href="img/global/favicon.png">
     <title>About Me</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
   <nav>
       <ul>
           <li>
-              <a href="index.html"><img src="img/Subtract.png" alt="Home"></a>
+              <a href="index.html"><img src="img/global/Subtract.png" alt="Home"></a>
           </li>
           <li>
               <a href="about.html">ABOUT ME</a>
@@ -36,7 +36,7 @@
 
 <!-- side image panel -->
 <div class="image-panel">
-  <img src="img/about-panel-image.png" alt="at some point ill add a picture of myself">
+  <img src="img/about/about-panel-image.png" alt="at some point ill add a picture of myself">
 </div>
 
 <!-- header with introduction -->
@@ -105,39 +105,39 @@ CTS 2314 - Network Defense and Countermeasures
         <table>
             <tr>
               <td>Computer troubleshooting</td>
-              <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
+              <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"></td>
             </tr>
             <tr>
               <td>Computer setup</td>
-              <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
+              <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"></td>
             </tr>
             <tr>
               <td>Java</td>
-              <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"><img src="img/no_star.png"></td>
+              <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"><img src="img/about/no_star.png"></td>
             </tr>
             <tr>
               <td>MySQL</td>
-              <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
+              <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"></td>
             </tr>
             <tr>
               <td>JavaScript</td>
-              <td><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"><img src="img/no_star.png"><img src="img/no_star.png"></td>
+              <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"><img src="img/about/no_star.png"><img src="img/about/no_star.png"></td>
             </tr>
             <tr>
               <td>HTML</td>
-              <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
+              <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"></td>
             </tr>
             <tr>
              <td>CSS</td>
-             <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
+             <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"></td>
             </tr>
             <tr>
              <td>Bash</td>
-             <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"><img src="img/no_star.png"></td>
+             <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"><img src="img/about/no_star.png"></td>
             </tr>
             <tr>
               <td>Graphic Design</td>
-              <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
+              <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"></td>
             </tr>
             </table>
         </div>
@@ -149,35 +149,35 @@ CTS 2314 - Network Defense and Countermeasures
             <table>
               <tr>
                 <td>Adaptability</td>
-                <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
+                <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"></td>
               </tr>              
               <tr>
                 <td>Clear communication</td>
-                <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"><img src="img/no_star.png"></td>
+                <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"><img src="img/about/no_star.png"></td>
               </tr>
               <tr>
                 <td>Crisis management</td>
-                <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"><img src="img/no_star.png"></td>
+                <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"><img src="img/about/no_star.png"></td>
               </tr>
               <tr>
                 <td>Leadership</td>
-                <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
+                <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"></td>
               </tr>
               <tr>
                 <td>Teamwork</td>
-                <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
+                <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"></td>
               </tr>
               <tr>
                 <td>Organization</td>
-                <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"><img src="img/no_star.png"></td>
+                <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"><img src="img/about/no_star.png"></td>
               </tr>
               <tr>
                 <td>Microsoft Office</td>
-                <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
+                <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"></td>
               </tr>
               <tr>
                 <td>Research</td>
-                <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
+                <td><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/star.png"><img src="img/about/no_star.png"></td>
               </tr>
               </table>           
         </div>
