--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jordan Collins">
-    <link rel="icon" type="img/png" href="img/favicon.png">
+    <link rel="icon" type="img/png" href="img/global/favicon.png">
     <title>My Projects</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
     <nav>
         <ul>
             <li>
-                <a href="index.html"><img src="img/Subtract.png" alt="Home"></a>
+                <a href="index.html"><img src="img/global/Subtract.png" alt="Home"></a>
             </li>
             <li>
                 <a href="about.html">ABOUT ME</a>
@@ -37,7 +37,7 @@
   
   <!-- side image panel -->
   <div class="image-panel">
-    <img src="img/proj-panel-image.png" alt="at some point ill add a picture of myself">
+    <img src="img/projects/proj-panel-image.png" alt="About panel">
   </div>
   
 <!-- header with navigation links -->
@@ -50,7 +50,7 @@
         see the individual projects.
         <br><br>You can also just visit the projects page on my LinkedIn that I have provided below for more details.
     </p>
-    <a target="_blank" href="https://www.linkedin.com/in/jordan--collins/details/projects/" target="_blank">Projects on LinkedIn<br></a>
+    <a href="https://www.linkedin.com/in/jordan--collins/details/projects/" target="_blank">Projects on LinkedIn<br></a>
     <!-- <a target="_blank"target=""href="#DESIGN_PROJECTS">Design Projects<br></a>
     <a target="_blank"href="#DEV_PROJECTS">Development Projects<br></a>
     <a target="_blank"href="#EXTRA_PROJECTS">Extracurricular Projects<br></a> -->
@@ -72,7 +72,7 @@
             if you don't care to run the demo and want to just see what our design looks like.
         </p>
                 <a target="_blank" href="https://www.figma.com/proto/KbKCcG2I9OtYRnN5GmP2fs/Sprint-3?node-id=18-178&node-type=canvas&t=PO208mAJY0lRT25V-1&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=18%3A178" 
-                alt="See the UX Design"><img src="img/ux3.png" class="image"></a>
+                alt="See the UX Design"><img src="img/projects/ux3.png" class="image"></a>
             </div>
             <div class="project">
                 <h3><b>User Experience Design #4</b><br></h3>
@@ -80,7 +80,7 @@
                      I was given the games page and the drill practice page as well, but I helped with the design on all pages.
                       It is a bit hard to navigate at some points, but you can simulate a drill and look around all pages.</p>
                 <a target="_blank" href="https://www.figma.com/proto/NBxAsmJDVHv4pyW8yA4TPx/DrawDrillls-Website?node-id=289-3951&starting-point-node-id=289%3A3951&t=s7NlJ6Gg3xY07yVs-1" 
-                alt="See the UX Design"><img src="img/ux4.png" class="image"></a>
+                alt="See the UX Design"><img src="img/projects/ux4.png" class="image"></a>
             </div>
             <div class="project">
                 <h3><b>Mobile App Project Proposal</b><br></h3>
@@ -89,7 +89,7 @@
                     Health @ Home called the Health @ Home app. We decided to make an app that improves communication between 
                     patients and physicians who use Health @ Home. For this project, we had to do research on costs for app creation 
                     with the limited budget of Health @ Home and we had to present this app to our "stakeholders". </p>
-                <a target="_blank"href="img/3201final.pdf" alt="See the Proposal"><img src="img/mob_app.png" class="image"></a>
+                <a target="_blank"href="img/pdf/3201final.pdf" alt="See the Proposal"><img src="img/projects/mob_app.png" class="image"></a>
             </div>
             <div class="project">
                 <h3><b>Information Archetecture Project</b><br></h3>
@@ -97,11 +97,11 @@
                     website for a business to have better architecture by changing the information scent and spread. I also completely 
                     changed the layout and color of the website to be more inviting to new users.</p>
                 <a target="_blank" href="https://www.figma.com/proto/EPcK7Ty8W3ZTov10SAf9Vt/IA-Wireframe?t=IKnq5ggD9buIBR0T-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&node-id=1-2" 
-                alt="See the IA Wireframe"><img src="img/IAP.png" class="image"></a>
+                alt="See the IA Wireframe"><img src="img/projects/IAP.png" class="image"></a>
             </div>
           </details>
 
-          <img src="img/Line 2.png">
+          <img src="img/projects/Line 2.png">
 
         <details>
             <summary>
@@ -114,7 +114,7 @@
                 In the class, we used Tomcat, Bitbucket, AAMPS, mySQL workbench to complete various assignments about databases and forms.
                 In the Bitbucket link provided, the README shows what each assignment does and leads to the assignment README for more details.</p>
                 <a target="_blank" href="https://bitbucket.org/lis4368jlc/lis4368/src/main/" 
-                alt="See the Class Bitbucket"><img src="img/lis4368.png" class="image"></a>
+                alt="See the Class Bitbucket"><img src="img/projects/lis4368.png" class="image"></a>
             </div> 
             <div class="project">
                 <h3><b>Extensible Enterprise Solutions Project</b><br></h3>
@@ -122,11 +122,11 @@
                     Anaconda, and eventually RStudio. In the Bitbucket link provided, the README shows what each assignment does and 
                     leads to the assignment README for more details.</p>
                 <a target="_blank" href="https://bitbucket.org/lis4368jlc/lis4369/src/master/" 
-                alt="See the Class Bitbucket"><img src="img/lis4369.png" class="image"></a>
+                alt="See the Class Bitbucket"><img src="img/projects/lis4369.png" class="image"></a>
             </div> 
           </details>
 
-          <img src="img/Line 2.png">
+          <img src="img/projects/Line 2.png">
 
           <details>
             <summary>
@@ -139,7 +139,7 @@
                     In this submission, we decided to make a game where you need to make the best choices for Harmony Heights - 
                     a small town that has elected you as its mayor. We did not end up winning, but we had fun making this nonetheless.</p>
                 <a target="_blank" href="https://www.figma.com/proto/EcPbp1IECN3Cmh9WGFY826/The-Healthier-Future?node-id=12-54&starting-point-node-id=12%3A54" 
-                alt="Run the Design"><img src="img/gatorux.png" class="image"></a>
+                alt="Run the Design"><img src="img/projects/gatorux.png" class="image"></a>
             </div> 
             <div class="project">
                 <h3><b>Codeducation Website</b><br></h3>
@@ -147,7 +147,7 @@
                     is being hosted on Github. I completely designed and am coding the Home and Contact pages. 
                     As of now, it is still under construction, but anyone is free to look at our code.</p>
                 <a target="_blank" href="https://github.com/codeducationfsu/codeducationfsu.github.io" 
-                alt="Check out the GitHub"><img src="img/code_site.png" class="image"></a>
+                alt="Check out the GitHub"><img src="img/projects/code_site.png" class="image"></a>
             </div> 
             <div class="project">
                 <h3><b>Desk Assistant Stickers</b><br></h3>
@@ -155,7 +155,7 @@
                         would be considered for the sticker design that year. The requirement was one design
                         but I made 15 because I had so many ideas. This presentation is very informal! It was sort of a joke but most of 
                         the ideas were serious contenders that were made into stickers!</p>
-                    <a target="_blank" href="img/my sticker ideas.pdf" alt="See the presentation"><img src="img/da_stickers.png" class="image"></a>
+                    <a target="_blank" href="img/pdf/my sticker ideas.pdf" alt="See the presentation"><img src="img/projects/da_stickers.png" class="image"></a>
             </div> 
           </details>
 </div>
@@ -164,9 +164,9 @@
 <div class="contact">
 <p>Contact me via email or on LinkedIn!</p>
 <div class="contact-icons">
-<a href="mailto:jlc21f@fsu.edu"><img src="img/Subtract (1).png" alt="Email me"><br><br>
+<a href="mailto:jlc21f@fsu.edu"><img src="img/global/Subtract (1).png" alt="Email me"><br><br>
 </a>
-<a target="_blank" href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
+<a target="_blank" href="https://www.linkedin.com/in/jordan--collins/"><img src="img/global/in.png" alt="My LinkedIn">
 </a>
 </div>
 </div>
