--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
         <ul>
             <li>
-                <a href="index.html"><img src="img/Subtract.png" alt="Home"></a>
+                <a href="index.html"><img src="img/global/Subtract.png" alt="Home"></a>
             </li>
             <li>
                 <a href="about.html">ABOUT ME</a>
@@ -38,7 +38,7 @@
 
 <!-- side image panel-->
  <div class="image-panel">
-    <img src="img/home-panel-image.png" alt="at some point ill add a picture of myself">
+    <img src="img/home/home-panel-image.png" alt="at some point ill add a picture of myself">
 </div> 
 
 <div class="opener">
@@ -50,7 +50,7 @@
     </p>
     <a href="mailto:jlc21f@fsu.edu">jlc21f@fsu.edu<br><br>
     </a>
-    <a target="_blank" href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
+    <a target="_blank" href="https://www.linkedin.com/in/jordan--collins/"><img src="img/global/in.png" alt="My LinkedIn">
     </a>
 </div>
 
@@ -69,8 +69,8 @@
     <div class="card-row2">
         <div class="card-column2">
             <div class="card2">
-                <a target="_blank" href="img/jordan_collins_resume.pdf">
-                    <img class="img-fluid" alt="open pdf" src="img/resume.png">
+                <a target="_blank" href="img/pdf/jordan_collins_resume.pdf">
+                    <img class="img-fluid" alt="open pdf" src="img/home/resume.png">
                </a>    </div>
     </div>
         <div class="card-column2">
@@ -80,7 +80,7 @@
         you can download or view it here. But I would at least check out the projects
          page to see all of my more recent projects.</p>
         <!-- <a href="img/resume.png" download="jordan_collins_resume"><i><b><u>Download</u></b></i></a><br><br> -->
-        <a target="_blank" href="img/jordan_collins_resume.pdf"><i><b><u>View</u></b></i></a><br><br>
+        <a target="_blank" href="img/pdf/jordan_collins_resume.pdf"><i><b><u>View</u></b></i></a><br><br>
         </div>
         </div>
 </div>
@@ -91,7 +91,7 @@
     <div class="card-column">
         <div class="card">
             <h3>Want to learn more about me?</h3>
-            <a target="_blank" href="about.html" alt="Visit the About Page"><img src="img/home_about.png" class="image" alt="About page"></a>
+            <a target="_blank" href="about.html" alt="Visit the About Page"><img src="img/home/home_about.png" class="image" alt="About page"></a>
             <p>I have more information about me like my education and skills on my about page!</p>
         </div>
     </div>
@@ -99,7 +99,7 @@
     <div class="card-column">
         <div class="card">
             <h3>Want to see some projects I have done?</h3>
-            <a target="_blank" href="projects.html" alt="Visit the Projects Page"><img src="img/home_project.png" class="image" alt="Projects page"></a>
+            <a target="_blank" href="projects.html" alt="Visit the Projects Page"><img src="img/home/home_project.png" class="image" alt="Projects page"></a>
             <p> I listed the various projects I have completed on the projects page!</p>
         </div>
     </div>
@@ -108,9 +108,9 @@
     <div class="contact">
         <p>Contact me via email or on LinkedIn!</p>
         <div class="contact-icons">
-        <a href="mailto:jlc21f@fsu.edu"><img src="img/Subtract (1).png" alt="Email me"><br><br>
+        <a href="mailto:jlc21f@fsu.edu"><img src="img/global/Subtract (1).png (1).png" alt="Email me"><br><br>
         </a>
-        <a target="_blank" href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
+        <a target="_blank" href="https://www.linkedin.com/in/jordan--collins/"><img src="img/global/in.png" alt="My LinkedIn">
         </a>
         </div>
         </div>
