--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="card-column">
         <div class="card">
             <h3>Want to learn more about me?</h3>
-            <a target="_blank" href="about.html" alt="Visit the About Page"><img src="img/home/home_about.png" class="image" alt="About page"></a>
+            <a href="about.html" alt="Visit the About Page"><img src="img/home/home_about.png" class="image" alt="About page"></a>
             <p>I have more information about me like my education and skills on my about page!</p>
         </div>
     </div>
@@ -99,7 +99,7 @@
     <div class="card-column">
         <div class="card">
             <h3>Want to see some projects I have done?</h3>
-            <a target="_blank" href="projects.html" alt="Visit the Projects Page"><img src="img/home/home_project.png" class="image" alt="Projects page"></a>
+            <a href="projects.html" alt="Visit the Projects Page"><img src="img/home/home_project.png" class="image" alt="Projects page"></a>
             <p> I listed the various projects I have completed on the projects page!</p>
         </div>
     </div>
@@ -108,7 +108,7 @@
     <div class="contact">
         <p>Contact me via email or on LinkedIn!</p>
         <div class="contact-icons">
-        <a href="mailto:jlc21f@fsu.edu"><img src="img/global/Subtract (1).png (1).png" alt="Email me"><br><br>
+        <a href="mailto:jlc21f@fsu.edu"><img src="img/global/Subtract (1).png" alt="Email me"><br><br>
         </a>
         <a target="_blank" href="https://www.linkedin.com/in/jordan--collins/"><img src="img/global/in.png" alt="My LinkedIn">
         </a>
