--- a/about.html
+++ b/about.html
@@ -190,9 +190,9 @@ CTS 2314 - Network Defense and Countermeasures
 <div class="contact">
     <p>Contact me via email or on LinkedIn!</p>
     <div class="contact-icons">
-    <a href="mailto:jlc21f@fsu.edu"><img src="img/Subtract (1).png" alt="Email me"><br><br>
+    <a href="mailto:jlc21f@fsu.edu"><img src="img/global/Subtract (1).png" alt="Email me"><br><br>
     </a>
-    <a target="_blank" href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
+    <a target="_blank" href="https://www.linkedin.com/in/jordan--collins/"><img src="img/global/in.png" alt="My LinkedIn">
     </a>
     </div>
     </div>
