updated for assignment 4

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jordan Collins">
     <link rel="icon" type="img/png" href="img/global/favicon.png">
-    <title>About Me</title>
+    <title>My Experience</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
               <a href="index.html"><img src="img/global/Subtract.png" alt="Home"></a>
           </li>
           <li>
-              <a href="about.html">ABOUT ME</a>
+              <a href="about.html">EXPERIENCE</a>
           </li>
           <li>
           <a href="projects.html">PROJECTS</a>
@@ -36,13 +36,13 @@
 
 <!-- side image panel -->
 <div class="image-panel">
-  <img src="img/about/about-panel-image.png" alt="at some point ill add a picture of myself">
+  <img src="img/about/about-panel-image.png">
 </div>
 
 <!-- header with introduction -->
 <div class="main_section">
 <div class="opener">
-    <h1><mark>About</mark> Me</h1>
+    <h1>My <mark>Experience</mark></h1>
     <p>
         On this page, you will find my working experience, my current education, and any skills I have gained from them.
     </p>
