--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="index.html"><img src="img/global/Subtract.png" alt="Home"></a>
             </li>
             <li>
-                <a href="about.html">ABOUT ME</a>
+                <a href="about.html">EXPERIENCE</a>
             </li>
             <li>
             <a href="projects.html">PROJECTS</a>
@@ -38,7 +38,7 @@
 
 <!-- side image panel-->
  <div class="image-panel">
-    <img src="img/home/home-panel-image.png" alt="at some point ill add a picture of myself">
+    <img src="img/home/home-panel-image.png">
 </div> 
 
 <div class="opener">
@@ -59,6 +59,7 @@
     <h2>My Background</h2>
     <p>My name is Jordan Collins and I am an Information Technology major from Jacksonville, Florida.
          I am currrently a senior at Florida State University working toward my Bachelors in Science in IT.
+         <br><br>
          My focuses so far are in Web Design, Networking, and Data Analytics and I am pursuing careers as a 
          Web Designer, Network Specialist or Data Analyst.
         </p>
