--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
                 <a href="index.html"><img src="img/global/Subtract.png" alt="Home"></a>
             </li>
             <li>
-                <a href="about.html">ABOUT ME</a>
+                <a href="about.html">EXPERIENCE</a>
             </li>
             <li>
             <a href="projects.html">PROJECTS</a>
