--- a/projects.html
+++ b/projects.html
@@ -66,19 +66,22 @@
             <div class="project">
                 <h3><br><b>User Experience Design #3</b><br></h3>
                     <p>For LIS4351, we were tasked to create a redesign for a photobooth for an application our professor used over a 
-                    decade ago. It was a group of five, but the design and development was completely mine with feedback from 
-            my group mates. If you want to run the demo, it is set up to allow you to choose 2 pictures, 2 emails, and 2 printed photos 
-            with the FSU logo and Super Mario Galaxy as backgrounds and you can't enter any text. You can also just keep hitting continue 
-            if you don't care to run the demo and want to just see what our design looks like.
-        </p>
+                    decade ago.If you want to run the demo, it is set up to allow you to choose 2 pictures, 2 emails, and 2 printed photos 
+                    with the FSU logo and Super Mario Galaxy as backgrounds and you can't enter any text. You can also just keep hitting 
+                    continue if you don't care to run the demo and want to just see what our design looks like.<br>
+                    It was a group of five, but the design and development was completely mine with feedback from my group mates. 
+                     </p>
+                     <a href="img/pdf/UX-3.pdf" target="_blank"><em>View presentation</em></a>
                 <a target="_blank" href="https://www.figma.com/proto/KbKCcG2I9OtYRnN5GmP2fs/Sprint-3?node-id=18-178&node-type=canvas&t=PO208mAJY0lRT25V-1&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=18%3A178" 
                 alt="See the UX Design"><img src="img/projects/ux3.png" class="image"></a>
             </div>
             <div class="project">
                 <h3><b>User Experience Design #4</b><br></h3>
                     <p>In this group assignment for LIS4351 we were given a possible startup project from our professor.
-                     I was given the games page and the drill practice page as well, but I helped with the design on all pages.
-                      It is a bit hard to navigate at some points, but you can simulate a drill and look around all pages.</p>
+                    It is a bit hard to navigate at some points, but you can simulate a drill and look around all pages.<br>
+                    My role in this was to develop the games page and the drill practice page as well, but I helped with the design on all pages.
+                    </p>
+                    <a href="img/pdf/UX-4.pdf" target="_blank"><em>View presentation</em></a>
                 <a target="_blank" href="https://www.figma.com/proto/NBxAsmJDVHv4pyW8yA4TPx/DrawDrillls-Website?node-id=289-3951&starting-point-node-id=289%3A3951&t=s7NlJ6Gg3xY07yVs-1" 
                 alt="See the UX Design"><img src="img/projects/ux4.png" class="image"></a>
             </div>
@@ -86,16 +89,23 @@
                 <h3><b>Mobile App Project Proposal</b><br></h3>
                     <p>For Spring 2024, I took Research and Data Analysis in Information Technology, LIS3201, and was tasked to 
                     propose a product for a mock company. The product my group and I decided to do was an app for the mock company 
-                    Health @ Home called the Health @ Home app. We decided to make an app that improves communication between 
+                    Health @ Home simply called the Health @ Home app. We decided to make an app that improves communication between 
                     patients and physicians who use Health @ Home. For this project, we had to do research on costs for app creation 
-                    with the limited budget of Health @ Home and we had to present this app to our "stakeholders". </p>
+                    with the limited budget of Health @ Home and we had to present this app to our "stakeholders". <br>
+                    My group members and I equally worked on design, research, and data organization.
+                    </p>
+                    <a href="img/pdf/HAH_prototype.pdf" target="_blank"><em>View prototype</em></a>
                 <a target="_blank"href="img/pdf/3201final.pdf" alt="See the Proposal"><img src="img/projects/mob_app.png" class="image"></a>
             </div>
             <div class="project">
                 <h3><b>Information Archetecture Project</b><br></h3>
                     <p>In this group assignment for Information Archetecture, LIS3793, we where were tasked with redesigning a 
                     website for a business to have better architecture by changing the information scent and spread. I also completely 
-                    changed the layout and color of the website to be more inviting to new users.</p>
+                    changed the layout and color of the website to be more inviting to new users.<br>
+                    We were all tasked with researching how the data and layout should be arranged, however I spearheaded the redesign
+                    and the prototype given were the pages I completed.
+                </p>
+                    <a href="img/pdf/ia_presentation.pdf" target="_blank"><em>View presentation</em></a>
                 <a target="_blank" href="https://www.figma.com/proto/EPcK7Ty8W3ZTov10SAf9Vt/IA-Wireframe?t=IKnq5ggD9buIBR0T-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&node-id=1-2" 
                 alt="See the IA Wireframe"><img src="img/projects/IAP.png" class="image"></a>
             </div>
@@ -137,7 +147,9 @@
                 <h3><br><b>Gator UX Designathon</b><br></h3>
                     <p>A 24-hour design sprint hosted by Gator User Design with the theme of the Healthier Future. 
                     In this submission, we decided to make a game where you need to make the best choices for Harmony Heights - 
-                    a small town that has elected you as its mayor. We did not end up winning, but we had fun making this nonetheless.</p>
+                    a small town that has elected you as its mayor. We did not end up winning, but we had fun making this nonetheless.<br>
+                    My roles in this project were 2D artist, prototyper, visual director, and editor.
+                </p>
                 <a target="_blank" href="https://www.figma.com/proto/EcPbp1IECN3Cmh9WGFY826/The-Healthier-Future?node-id=12-54&starting-point-node-id=12%3A54" 
                 alt="Run the Design"><img src="img/projects/gatorux.png" class="image"></a>
             </div> 
@@ -145,7 +157,9 @@
                 <h3><b>Codeducation Website</b><br></h3>
                     <p>As a the Head Webmaster of the Codeducation club, I am currently working on the website for the club which 
                     is being hosted on Github. I completely designed and am coding the Home and Contact pages. 
-                    As of now, it is still under construction, but anyone is free to look at our code.</p>
+                    As of now, it is still under construction, but anyone is free to look at our code.<br>
+                    My role as the Head Webmaster is to design every page and code the Home and Contact Us pages.
+                </p>
                 <a target="_blank" href="https://github.com/codeducationfsu/codeducationfsu.github.io" 
                 alt="Check out the GitHub"><img src="img/projects/code_site.png" class="image"></a>
             </div> 
@@ -154,7 +168,8 @@
                     <p>In January 2024, my supervisor for University Housing hosted a sticker competition and the winner
                         would be considered for the sticker design that year. The requirement was one design
                         but I made 15 because I had so many ideas. This presentation is very informal! It was sort of a joke but most of 
-                        the ideas were serious contenders that were made into stickers!</p>
+                        the ideas were serious contenders that were made into real stickers</p>
+                        <a href="img/pdf/sticker_ideas.pdf" target="_blank"><em>View individual stickers</em></a>
                     <a target="_blank" href="img/pdf/my sticker ideas.pdf" alt="See the presentation"><img src="img/projects/da_stickers.png" class="image"></a>
             </div> 
           </details>
