how to build a website

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <li>
             <a href="projects.html">PROJECTS</a>
           </li>
+          <li>
+            <a href="HOWTO.html">HOW TO</a>
+          </li>
           <!--<li>
             <a href="">CONTACT</a>
           </li> -->
