post grad update!

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
             <li>
             <a href="projects.html">PROJECTS</a>
           </li>
-          <li>
-            <a href="HOWTO.html">HOW TO</a>
-          </li>
+
           <!--<li>
             <a href="">CONTACT</a>
           </li> -->
@@ -60,11 +58,11 @@
 <!-- section with the background -->
 <div class="left_section">
     <h2>My Background</h2>
-    <p>My name is Jordan Collins and I am an Information Technology major from Jacksonville, Florida.
-         I am currrently a senior at Florida State University working toward my Bachelors in Science in IT.
+    <p>My name is Jordan Collins located in Tallahassee, Florida.
+         I am a Florida State University graduate with a Bachelor of Science in Information Technology.
          <br><br>
-         My focuses so far are in Web Design, Networking, and Data Analytics and I am pursuing careers as a 
-         Web Designer, Network Specialist or Data Analyst.
+         My focuses so far are in User Experience Design, Web Design, and Data Analytics and I am pursuing careers as a 
+         UI/UX Designer, Web Designer, or Data Analyst.
         </p>
 </div>
 
